[package]
name = "api"
version = "0.1.0"
authors = ["George Wheeler <george@dewey4.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
actix-web = "3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.3"
log = "0.4.14"
serde = "1.0.125"
serde_json = "1.0.64"
tracing = "0.1.25"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde_derive = "1.0.125"
futures = "0.3.14"
clap = "2.33.3"
dotenv = "0.15.0"
actix-cors = "0.5.4"
anyhow = "1.0.40"

[dependencies.sqlx]
version = "0.4.2"
features = [
        "chrono",
        "decimal",
        "json",
        "macros",
        "migrate",
        "postgres",
        "mysql",
        "runtime-actix-rustls",
        "tls",
        "uuid",
]

