[package]
name = "lib"
version = "0.1.0"
authors = ["George Wheeler <george@dewey4.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "1.0.6"
actix-web = "3.3.2"
anyhow = "1.0.40"
async-trait = "0.1.50"
base64 = "0.13.0"
bcrypt = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.3"
futures = "0.3.14"
jsonwebtoken = "7.2.0"
log = "0.4.14"
openssl = "0.10.34"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
tracing = "0.1.25"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "0.4.2"
features = [
        "chrono",
        "decimal",
        "json",
        "macros",
        "migrate",
        "postgres",
        "mysql",
        "runtime-actix-rustls",
        "tls",
        "uuid",
]

